chore: Add logging functionality to NotifyController

--- a/LineNotify.Tests.Web/LineNotify.Tests.Web.csproj
+++ b/LineNotify.Tests.Web/LineNotify.Tests.Web.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LineNotify\LineNotify.csproj" />
+  </ItemGroup>
 
 </Project>
