--- a/LineNotify/LineNotify.csproj
+++ b/LineNotify/LineNotify.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\secret\Secret\Secret.csproj" />
+  </ItemGroup>
+
 </Project>
